[gd_scene load_steps=20 format=3 uid="uid://ddhgqd7utunxr"]

[ext_resource type="Script" path="res://Scenes/Enemies/mounted_turret.gd" id="1_5t4ta"]
[ext_resource type="Texture2D" uid="uid://dm6gmb6v241mo" path="res://Art/Enemies/MountedTurret.png" id="2_7eko0"]
[ext_resource type="Texture2D" uid="uid://b3fy42tcvph1c" path="res://Art/Effects/Turret_Blast.png" id="3_4oj4b"]
[ext_resource type="Texture2D" uid="uid://cxh6n7gcoflsn" path="res://Art/Enemies/MountedTurretBase.png" id="3_lvb0d"]
[ext_resource type="PackedScene" uid="uid://cqn4n44lubnpt" path="res://Scenes/Entities/effect_audio_player.tscn" id="6_2wsfa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rv64x"]
atlas = ExtResource("2_7eko0")
region = Rect2(0, 0, 28, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mpij"]
atlas = ExtResource("2_7eko0")
region = Rect2(28, 0, 28, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6lt7"]
atlas = ExtResource("2_7eko0")
region = Rect2(56, 0, 28, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5pbw"]
atlas = ExtResource("2_7eko0")
region = Rect2(84, 0, 28, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1q23"]
atlas = ExtResource("2_7eko0")
region = Rect2(0, 41, 28, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_pthge"]
atlas = ExtResource("2_7eko0")
region = Rect2(28, 41, 28, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_htkps"]
atlas = ExtResource("2_7eko0")
region = Rect2(56, 41, 28, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5ewn"]
atlas = ExtResource("2_7eko0")
region = Rect2(0, 0, 28, 41)

[sub_resource type="SpriteFrames" id="SpriteFrames_1dnfy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv64x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mpij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6lt7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5pbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1q23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pthge")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_htkps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htkps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htkps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5ewn")
}],
"loop": false,
"name": &"shot",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ipa3x"]
atlas = ExtResource("3_4oj4b")
region = Rect2(0, 0, 36, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_xe07u"]
atlas = ExtResource("3_4oj4b")
region = Rect2(36, 0, 36, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqftv"]
atlas = ExtResource("3_4oj4b")
region = Rect2(72, 0, 36, 29)

[sub_resource type="SpriteFrames" id="SpriteFrames_0na5y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipa3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xe07u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqftv")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eswis"]
size = Vector2(20, 41)

[node name="MountedTurret" type="CharacterBody2D"]
z_index = 10
script = ExtResource("1_5t4ta")

[node name="Turret" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 8)
sprite_frames = SubResource("SpriteFrames_1dnfy")
animation = &"shot"
autoplay = "default"
frame = 2
frame_progress = 1.0
offset = Vector2(0, -8)

[node name="spawn_position" type="Marker2D" parent="Turret"]
position = Vector2(0, -22.115)

[node name="bullet_traget" type="Marker2D" parent="Turret"]
position = Vector2(0, -46)

[node name="back_blast" type="AnimatedSprite2D" parent="Turret"]
position = Vector2(0, -25)
sprite_frames = SubResource("SpriteFrames_0na5y")
frame = 4
frame_progress = 1.0

[node name="Base" type="Sprite2D" parent="."]
texture = ExtResource("3_lvb0d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_eswis")

[node name="EffectAudioPlayer" parent="." instance=ExtResource("6_2wsfa")]

[node name="shot_timer" type="Timer" parent="."]
wait_time = 3.2
autostart = true

[connection signal="animation_finished" from="Turret" to="." method="_on_turret_animation_finished"]
[connection signal="timeout" from="shot_timer" to="." method="_on_shot_timer_timeout"]
